system/logs/Cifar10/Cifar10_dir_0.3_imbalance_40/epochs_10/SAE_addTGP_gamma_1.0_beta_0.8_buffer=1.0.out
  File "main.py", line 439
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
